# ozon_puller

./: .env-dev  .env_prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-local.yaml  docker-compose.frontend.yml  docker-compose.monitoring.yaml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  docker-compose_dev.yml  init_multiple_databases.sh  main.py  pyproject.toml  settings.py  setup.cfg  test_main.http
api/: handlers.py  models.py
app/: backend_pre_start.py  main.py  tests_pre_start.py
app/alembic/: env.py
app/alembic/versions/: 1d35b92908e7_add_a_role_column.py  2024_05_11_1035-0fa68411d496_add_relates_users_and_ozon_confidential_.py  2024_05_11_1418-f0fe2ce98f9c_add_relate_users.py  2024_05_11_1420-c3caf25c3782_add_relate_role.py  2024_05_21_0018-883cecddd829_add_relate_reports.py  2024_05_22_1549-602870d72ff1_add_relationship_many_to_many_for_user_.py  69e034411b09_add_hash_password_column_in_table_users.py
app/api/: celery_task.py  deps.py  main.py  models.py
app/api/routes/: login.py  ozon_request.py  role.py  users.py
app/api/routes/action/: login.py  users.py
app/api/routes/servises/: login.py  ozon_request.py  users.py
app/core/: celery.py  config.py  init_db.py  security.py  settings.py
app/crud/: base_crud.py  ozon_report_crud.py  user_crud.py
app/db/: crud.py  dals.py  models.py  session.py
app/models/: links_model.py  ozon_data_model.py  role_model.py  user_models.py
app/schemas/: base_schema.py  response_schema.py
app/tests/: alembic.ini  conftest.py
app/tests/test_handlers/: test_create_handler.py  test_delete_handler.py  test_get_handler.py  test_role_management.py  test_update_handler.py
app/tests/test_migrations/: env.py
app/tests/test_migrations/versions/: e1c387a6f080_test_running_migrations.py
app/tests/utils/: user.py
app/utils/: partial.py
app/utils/exceptions/: user_exceptions.py
backend/: pyproject.toml  setup.cfg
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2024_05_11_1035-0fa68411d496_add_relates_users_and_ozon_confidential_.py  2024_05_11_1420-c3caf25c3782_add_relate_role.py  2024_05_11_1421-9c7eb53a7abd_add_relate_ozon_confidential_data.py  2024_05_21_1514-dc5edc2bfc38_add_in_relate_reports_lazy_joined.py  2024_05_27_2125-7ee9cf914566_change_ozon_created_at_to_optional_field.py  2024_06_13_1213-ad4df92b4089_.py  2024_06_13_1319-c0bc38842904_.py
backend/app/api/: celery_task.py  deps.py  main.py
backend/app/api/routes/: login.py  ozon_data.py  ozon_request.py  report.py  role.py  users.py
backend/app/core/: celery.py  config.py  init_db.py  security.py
backend/app/crud/: __init__.py  base_crud.py  ozon_data_crud.py  ozon_report_crud.py  role_crud.py  user_crud.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base_uuid_model.py  links_model.py  ozon_data_model.py  ozon_report_model.py  role_model.py  user_models.py
backend/app/schemas/: ozon_data_schema.py  ozon_report_schema.py  ozon_requests_schema.py  ozon_response_schema.py  response_schema.py  role_schema.py  token_schema.py  user_schema.py
backend/app/tests/: conftest.py
backend/app/tests/test_api/: test_create_handler.py  test_ozon_data_handler.py  test_report_handler.py  test_role_handler.py
backend/app/tests/test_crud/: test_ozon_data_crud.py  test_report_crud.py  test_role_crud.py  test_user_crud.py
backend/app/tests/test_handlers/: test_create_handler.py
backend/app/tests/utils/: user.py  utils.py
backend/app/utils/: getURL.py  partial.py
backend/app/utils/exceptions/: common_exceptions.py
backend/compose/backend/: Dockerfile  init_celery.sh  init_celery_beat.sh  prestart.sh  tests-start.sh
backend/compose/backend/scripts/: lint.sh
backend/compose/multiple_databases_image/: Dockerfile
backend/compose/prometheus/: prometheus.yml
compose/backend/: Dockerfile
compose/multiple_databases_image/: init_multiple_databases.sh
db/: dals.py  models.py  session.py
frontend/: biome.json  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/client/core/: request.ts
frontend/src/components/Admin/: AddUser.tsx  EditUser.tsx
frontend/src/components/Common/: ActionsMenu.tsx  DeleteAlert.tsx  Download.tsx  Navbar.tsx  (+2 more)
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: _layout.tsx  login.tsx
migrations/: env.py
migrations/versions/: c56372749340_create_table_users.py
test/: conftest.py  test_handlers.py
test/test_handlers/: test_create_handler.py  test_delete_handler.py  test_get_handler.py  test_update_handler.py
test/test_migrations/: env.py
test/test_migrations/versions/: e1c387a6f080_test_running_migrations.py
tests/: alembic.ini  conftest.py
tests/test_handlers/: test_delete_handler.py  test_get_handler.py  test_update_handler.py
tests/test_migrations/: env.py
(+12 files in other folders)
