[tool.poetry]
name = "ozonpuller"
version = "0.1.0"
description = ""
authors = ["Teyrro <2vvoropaevv2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
alembic = "1.9.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
envparse = "^0.2.0"
asyncpg = "0.27.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
psycopg2 = "^2.9.9"
ruff = "^0.4.1"
logger = "^1.4"
pre-commit = "^3.7.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
exclude = ["migrations", ".git", "backand/db/base.py"]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
    "E712",
    "E501",
    "E402",
    "E203",
    "B008",
    "B904"
]

[tool.ruff.format]
exclude = ["migrations", ".git", "backand/db/base.py"]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20
