[tool.poetry]
name = "ozonpuller"
version = "0.1.0"
description = ""
authors = ["Teyrro <2vvoropaevv2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
passlib = "^1.7.4"

sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
psycopg2 = "^2.9.9"
bcrypt = "^4.1.2"
envparse = "^0.2.0"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
logger = "^1.4"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "E712",
    "E402",
    "ARG001"
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
